--- a/easy-rpc-server/pom.xml
+++ b/easy-rpc-server/pom.xml
@@ -28,6 +28,16 @@
             <version>4.11</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.redbyte.platform</groupId>
+            <artifactId>easy-rpc-common</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.redbyte.platform</groupId>
+            <artifactId>easy-rpc-registry</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
