--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,16 @@
             <artifactId>netty-all</artifactId>
             <version>4.1.55.Final</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava-bom</artifactId>
+            <version>29.0-jre</version>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.75</version>
+        </dependency>
     </dependencies>
 
     <build>
